--- a/templates/index.html
+++ b/templates/index.html
@@ -94,6 +94,7 @@
             $SCRIPT_ROOT+"/_words",
             function(data) {
                 $("#w2v2").text(data.w2v2)
+                $("#sb").text(data.sb)
             }
         );
     }
