added error notification

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,11 @@
             },
             cache: false,
             processData: false,
-            contentType: false
+            contentType: false,
+            error: function(error){
+                console.log("Error: ${error}")
+                alert("Error encountered... please try again")
+            }
         });
     }
 
