--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="row">
+    <div class="row" style="margin-top:5vh">
         <h1 class="text-center display-4">{% block title %} Audio Transcription Comparison {% endblock %}</h1>
     </div>
     <div class="row">
