--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,26 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #ddf1ff;">
+
+      <!--<a class="navbar-brand" href="/"></a>-->
+    
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Landing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/accuracy">Accuracy Check</a>
+          </li>
+          </div>
+        </ul>
+      </div>
+    </nav>
     {% block content %} {% endblock %}
 
     <!-- Optional JavaScript -->
