--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/">Landing</a>
+            <a class="nav-link" href="/">Comparison</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/accuracy">Accuracy Check</a>
