--- a/templates/accuracy.html
+++ b/templates/accuracy.html
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="row">
-        <footer style="margin-bottom:1vh;text-align:center;position:fixed;bottom:0">Similarity score calculated using Levenshtein distance</footer>
+        <footer style="margin-bottom:1vh;text-align:center;position:fixed;bottom:0">Similarity score calculated using word error rate</footer>
     </div>
     <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
 {% endblock %}
@@ -81,7 +81,7 @@
     var audioContext 
 
     const message = "Processing audio..."
-    const checkStart = "Similarity Score: "
+    const checkStart = "Word Error: "
     const checkEnd = "%"
 
     var recordButton = document.getElementById("startRecording");
@@ -126,7 +126,7 @@
     }
 
     function download(){
-        let csvContent = "data:text/csv;charset=utf-8,Original Text, W2V2 Transcription, W2V2 Score, SB Transcription, SB Score, Espnet Transcription, Espnet Score\n" 
+        let csvContent = "data:text/csv;charset=utf-8,Original Text, W2V2 Transcription, W2V2 Error, SB Transcription, SB Error, Espnet Transcription, Espnet Error\n" 
             + trials.map(e => e.join(",")).join("\n");
         var encodedUri = encodeURI(csvContent);
         var link = document.createElement("a");
@@ -156,23 +156,21 @@
         playButton.disabled=false
         var form = new FormData();
         form.append('file', data, 'data.wav');
+        form.append('ground', spokenText.value);
         console.log(data)
         $.ajax({
             type: 'POST',
-            url: '/save-record',
+            url: '/save-record-acc',
             data: form,
             success: function(data){
                 $("#w2v2").text(data.w2v2)
                 $("#sb").text(data.sb)
                 $("#espnet").text(data.espnet)
-                let wscore = similarity(data.w2v2, spokenText.value);
-                let sbscore = similarity(data.sb, spokenText.value);
-                let espscore = similarity(data.espnet, spokenText.value);
-                $("#wcheck").text(checkStart + wscore + checkEnd)
-                $("#sbcheck").text(checkStart + sbscore + checkEnd)
-                $("#espcheck").text(checkStart + espscore + checkEnd)
+                $("#wcheck").text(checkStart + data.wscore + checkEnd)
+                $("#sbcheck").text(checkStart + data.sbscore + checkEnd)
+                $("#espcheck").text(checkStart + data.espscore + checkEnd)
                 if(logButton.checked){
-                    trials.push(new Array(spokenText.value, new Array(data.w2v2, wscore), new Array(data.sb, sbscore), new Array(data.espnet, espscore)))
+                    trials.push(new Array(spokenText.value, new Array(data.w2v2, data.wscore), new Array(data.sb, data.sbscore), new Array(data.espnet, data.espscore)))
                     console.log(trials)
                 }
 
